@@ -1,7 +1,8 @@
 Revision history for Perl extension Alien::wxWidgets.
 
 0.51
-        - added wxWidgets-extraflags build option
+        - Added wxWidgets-extraflags build option.
+	- Exit with an error message under Cygwin.
 
 0.50  Sun Jan 10 16:16:44 CET 2010
 	- When compiling on Windows with MSVC 9, make the generated
